remove old site verification, fix  line spacing from including tailwind

--- a/app.css
+++ b/app.css
@@ -65,6 +65,10 @@ h1 {
     transition: opacity 1s, margin 1s;
 }
 
+#content > #info p {
+    margin: 1rem 0;
+}
+
 #socials {
     width: 100%;
     position: absolute;
